<resources>
    <string name="app_name">Teachable</string>
    <string name="Teachable">Teachable</string>
    <string name="forgot_password">Forgot Password</string>

    <string name="school_login">School Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="school_registration">School Registration</string>
    <string name="school_name">School Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="teacher">Teacher</string>
    <string name="school">School</string>
    <string name="notify">Notification</string>
    <string name="proceed">Proceed</string>
    <string name="registration_checkpoint">Registration Checkpoint</string>
    <string name="individual_user">Individual User</string>
    <string name="login_checkpoint">Login Checkpoint</string>

    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="submit">Submit</string>
    <string name="terms_and_conditions">By registering on Teachable, you agree with our <u>Terms and Conditions</u>.</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string name="lost_password_message">"Sorry you lost your password, let/'s help you regain access"
                                        to your account. How should we send you a login code</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_code_message">We just sent you a reset code. Enter your code below:</string>
    <string name="reset_code">Reset Code</string>
    <string name="resend_code">"Didn/'t get the code? Resend Code"</string>


    <string name="individual_login">Individual Login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="individual_reg">Individual Registration</string>
    <string name="first">First Name</string>
    <string name="last">Last Name</string>
    <string name="user">Username</string>
    <string name="phone">Mobile Number</string>
    <string name="agreement">By registering on Teachable, you agree with our</string>
    <string name="terms"><u>Terms Of Service</u>></string>
    <string name="reg_email">REGISTER WITH EMAIL</string>
    <string name="option_text">or register with:</string>
    <string name="name">Johnson Doe</string>
    <string name="location">Port Harcourt, Rivers State.</string>
    <string name="bio">Bio</string>
    <string name="bio_text">A tech savvy Chemical Engineer. A Christian. Loves God. Open to opportunities. In a relationship. One time this, one time that. currently a CEO.</string>
    <string name="accept_invite">Invitation Accepted</string>
    <string name="more_info">More Information</string>
    <string name="marital_stat">Marital Status:</string>
    <string name="single">Single</string>
    <string name="insta">Instagram:</string>
    <string name="Tweet">Twitter:</string>
    <string name="facebook_url">https://www.facebook.com/user.one</string>
    <string name="insta_url">https://www.instagram.com/user.one</string>
    <string name="tweet_url">https://www.twitter.com/user.one</string>
    <string name="face_book">Facebook:</string>
    <string name="rate">Rating:</string>
    <string name="sch_type">School Type:</string>
    <string name="sch_typeW">Private School</string>
    <string name="date_found">Date Founded:</string>
    <string name="date_founded">1989</string>
    <string name="sch_web">School Website:</string>
    <string name="website">https://www.loyaljesuit.com</string>
    <string name="work">Work Hours:</string>
    <string name="wrk_hrs">9AM - 4PM</string>
    <string name="approval">Approval Status:</string>
    <string name="approved_by">Government Approved</string>
    <string name="review">Reviews (6)</string>
    <string name="comment">Comment</string>
    <string name="member">Tracy Sparks</string>
    <string name="comments">Loyal jesuit is a very good school to work for and the best on this platform so far. You will definitely enjoy working here.</string>
    <string name="invite_tutor">Invite Tutor</string>
    <string name="qualification">Qualification:</string>
    <string name="Work_exp">Work Experience:</string>
    <string name="stat">Status:</string>
    <string name="qualify">B.Eng Chemical Engineering</string>
    <string name="experience">Teacher at LWA (2015-2020)</string>
    <string name="status">Part Time</string>
    <string name="test_scores">Test Scores</string>
    <string name="gen_know">General Knowledge</string>
    <string name="skill_know">Skill Knowledge</string>
    <string name="teacher_level">Teacher Level</string>
    <string name="level">Level 5</string>
    <string name="gen_know_score">86</string>
    <string name="skill_know_score">96</string>
    <string name="invite_sent">Invite Sent</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="take_test">Take Test</string>
    <string name="characters"> <i>140 Characters Only</i> </string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>

</resources>
