<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/root_padding"
    tools:context=".individual_registeration">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        style="@style/text_normal"
        android:text="@string/individual_reg"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/big_space"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:hint="@string/first"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:inputType="text"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/last"
        android:drawableLeft="@drawable/ic_email_grey_24dp"
        android:inputType="text"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/user"
        android:drawableLeft="@drawable/ic_account_circle_black_24dp"


        android:inputType="text"/>

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/phone_number_edt"
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/phone"
        android:inputType="phone"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email_grey_24dp"
        android:inputType="textEmailAddress"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/password"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_visibility_black_24dp"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/confirm_password"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"
        android:drawableRight="@drawable/ic_visibility_black_24dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/box_space">

        <CheckBox
            android:id="@+id/check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/agree_text"
            style="@style/text_normal"
            android:text="@string/agreement"
            android:layout_marginLeft="@dimen/large_space"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <TextView
            android:id="@+id/TOC"
            style="@style/text_normal"
            android:text="@string/terms"
            android:layout_marginLeft="@dimen/large_space"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_below="@id/agree_text"
            android:textColor="@color/colorGreen"/>

    </RelativeLayout>

    <Button
        style="@style/long_button"
        android:background="@drawable/green_button"
        android:text="@string/register"/>
</LinearLayout>