<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_padding"
    android:orientation="vertical"
    tools:context=".individual_login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        style="@style/text_normal"
        android:text="@string/individual_login"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/big_space"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/large_space"
        android:hint="@string/email_address"
        android:drawableLeft="@drawable/ic_email_grey_24dp"
        android:inputType="textEmailAddress"/>

    <android.support.v7.widget.AppCompatEditText
        style="@style/editText"
        android:layout_marginTop="@dimen/box_space"
        android:hint="@string/password"
        android:drawableLeft="@drawable/lock"
        android:inputType="textPassword"/>

    <Button
        style="@style/long_button"
        android:background="@drawable/green_button"
        android:text="@string/log_in"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/big_space"
        android:background="@color/grey"/>

    <TextView
        style="@style/text_normal"
        android:text="Login With"
        android:layout_marginTop="@dimen/box_space"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        style="@style/long_button"
        android:background="@drawable/blue_button"
        android:text="@string/facebook" />

    <Button
        style="@style/long_button"
        android:background="@drawable/red_button"
        android:text="@string/google"/>

    <TextView
        style="@style/text_normal"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/large_space"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
