<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/root_padding"
    tools:context=".individual_registration_option">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        style="@style/text_normal"
        android:text="@string/individual_reg"
        android:textColor="@color/colorBlack"
        android:padding="@dimen/big_space"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        style="@style/long_button"
        android:background="@drawable/button_green_outer_line"
        android:text="@string/reg_email"
        android:textColor="@color/colorGreen"
        android:layout_marginTop="60dp"
        android:drawableLeft="@drawable/ic_email_green_24dp"/>

    <TextView
        style="@style/text_normal"
        android:text="@string/option_text"
        android:textColor="@color/colorGreen"
        android:padding="@dimen/big_space"
        android:layout_marginTop="@dimen/large_space"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Button
        style="@style/long_button"
        android:background="@drawable/blue_button"
        android:text="@string/facebook"
        android:layout_marginTop="@dimen/large_space"/>

    <Button
        style="@style/long_button"
        android:background="@drawable/red_button"
        android:text="@string/google"/>


</LinearLayout>
